--- a/PostaMD/Base.lproj/Main.storyboard
+++ b/PostaMD/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="iMy-m1-Cy5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="iMy-m1-Cy5">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--Items-->
@@ -12,7 +12,6 @@
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="99" sectionHeaderHeight="22" sectionFooterHeight="22" id="C9P-hE-eph">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PackageCell" rowHeight="99" id="gbs-X4-gZd" customClass="PackageCell">
@@ -27,7 +26,6 @@
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qgP-bX-q2I">
                                                     <rect key="frame" x="0.0" y="8" width="266" height="25"/>
-                                                    <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="Scc-oz-hOX"/>
                                                     </constraints>
@@ -39,7 +37,6 @@
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RmX-CX-qWr">
                                                     <rect key="frame" x="0.0" y="38" width="266" height="21"/>
-                                                    <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="MVD-v7-BIa"/>
                                                     </constraints>
@@ -51,7 +48,6 @@
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="266" translatesAutoresizingMaskIntoConstraints="NO" id="bU2-db-VP5">
                                                     <rect key="frame" x="0.0" y="64" width="266" height="21"/>
-                                                    <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="lhV-oo-PYg"/>
                                                     </constraints>
@@ -62,7 +58,6 @@
                                                     <size key="shadowOffset" width="0.0" height="1"/>
                                                 </label>
                                             </subviews>
-                                            <animations/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstItem="RmX-CX-qWr" firstAttribute="top" secondItem="qgP-bX-q2I" secondAttribute="bottom" constant="5" id="1Qb-54-glC"/>
@@ -78,14 +73,14 @@
                                             </constraints>
                                         </view>
                                     </subviews>
-                                    <animations/>
+                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="VHT-dP-uUg" secondAttribute="trailing" constant="5" id="TCC-kp-Y8k"/>
                                         <constraint firstItem="VHT-dP-uUg" firstAttribute="centerY" secondItem="hvw-Vk-jEz" secondAttribute="centerY" id="U8s-BD-Hxy"/>
                                         <constraint firstItem="VHT-dP-uUg" firstAttribute="leading" secondItem="hvw-Vk-jEz" secondAttribute="leading" constant="16" id="pdP-cK-ymb"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <animations/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="lastTrackingInfoHeightConstraint" destination="lhV-oo-PYg" id="f9u-Vx-8LY"/>
                                     <outlet property="lbLastTrackingInfo" destination="bU2-db-VP5" id="CKS-6h-hdj"/>
@@ -134,12 +129,10 @@
                 <navigationController definesPresentationContext="YES" toolbarHidden="NO" id="iMy-m1-Cy5" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="s06-fd-5V6">
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Kdc-56-u18">
                         <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </toolbar>
                     <connections>
                         <segue destination="JFt-Mh-LAB" kind="relationship" relationship="rootViewController" id="WAA-8R-to5"/>
@@ -166,7 +159,6 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created by Andrei Zaharia" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="izS-qO-MQ9">
                                         <rect key="frame" x="20" y="20" width="200" height="21"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="200" id="W3F-Gm-o9T"/>
                                             <constraint firstAttribute="height" constant="21" id="n4I-ff-3C8"/>
@@ -179,7 +171,6 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wRC-V2-533">
                                         <rect key="frame" x="57" y="61" width="127" height="40"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="127" id="9Yg-BV-OIw"/>
                                             <constraint firstAttribute="width" constant="127" id="TMD-Xs-Yx3"/>
@@ -192,7 +183,6 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="wRC-V2-533" firstAttribute="top" secondItem="izS-qO-MQ9" secondAttribute="bottom" constant="20" id="1O3-Dv-Dwu"/>
@@ -204,7 +194,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cKL-l2-kMl" firstAttribute="centerY" secondItem="YeP-o9-ZWx" secondAttribute="centerY" id="0Ki-eI-pgc"/>
@@ -226,7 +215,6 @@
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="22" sectionFooterHeight="22" id="O2C-Kg-Pfm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="23m-xq-mE3">
                             <rect key="frame" x="0.0" y="64" width="320" height="52"/>
@@ -234,7 +222,6 @@
                             <subviews>
                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tracking Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cVI-YV-veP">
                                     <rect key="frame" x="10" y="6" width="300" height="40"/>
-                                    <animations/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="ieh-Ty-Mj9"/>
                                     </constraints>
@@ -245,7 +232,6 @@
                                     </connections>
                                 </textField>
                             </subviews>
-                            <animations/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="cVI-YV-veP" secondAttribute="trailing" constant="10" id="jWS-JH-Tv6"/>
@@ -263,7 +249,6 @@
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="80" translatesAutoresizingMaskIntoConstraints="NO" id="T87-YU-RzR">
                                             <rect key="frame" x="230" y="3" width="80" height="60"/>
-                                            <animations/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="80" id="7DH-VE-bfk"/>
                                             </constraints>
@@ -275,14 +260,12 @@
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6V6-a3-4qy">
                                             <rect key="frame" x="15" y="47" width="213" height="14"/>
-                                            <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="213" translatesAutoresizingMaskIntoConstraints="NO" id="dLS-VC-RbW">
                                             <rect key="frame" x="15" y="0.0" width="213" height="42"/>
-                                            <animations/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -290,7 +273,6 @@
                                             <size key="shadowOffset" width="0.0" height="1"/>
                                         </label>
                                     </subviews>
-                                    <animations/>
                                     <constraints>
                                         <constraint firstItem="6V6-a3-4qy" firstAttribute="leading" secondItem="PcD-qg-Zay" secondAttribute="leading" constant="15" id="3G9-Qt-xuw"/>
                                         <constraint firstItem="T87-YU-RzR" firstAttribute="leading" secondItem="6V6-a3-4qy" secondAttribute="trailing" constant="2" id="B48-cq-ZUg"/>
@@ -304,7 +286,6 @@
                                         <constraint firstAttribute="bottom" secondItem="6V6-a3-4qy" secondAttribute="bottom" constant="4" id="uhs-fa-dwa"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <animations/>
                                 <connections>
                                     <outlet property="lbCountry" destination="6V6-a3-4qy" id="p56-xV-hT5"/>
                                     <outlet property="lbDate" destination="T87-YU-RzR" id="OEe-0O-bAo"/>
@@ -346,7 +327,6 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zp2-up-D4f">
                                 <rect key="frame" x="88" y="224" width="145" height="54"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="54" id="JY6-6q-vx4"/>
                                     <constraint firstAttribute="width" constant="145" id="maT-dN-swY"/>
@@ -360,7 +340,6 @@
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e00-Mn-igz">
                                 <rect key="frame" x="16" y="72" width="289" height="62"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="62" id="eB7-wb-rpC"/>
                                 </constraints>
@@ -370,7 +349,6 @@
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tracking number" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HUu-4w-0zD">
                                 <rect key="frame" x="16" y="154" width="289" height="62"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="62" id="2q0-Up-vGP"/>
                                 </constraints>
@@ -379,7 +357,6 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no"/>
                             </textField>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Zp2-up-D4f" firstAttribute="top" secondItem="HUu-4w-0zD" secondAttribute="bottom" constant="8" id="6nW-uT-egs"/>
